--- a/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/DevelopEntrant.razor
@@ -1,6 +1,6 @@
 ﻿@inject ISnackbar _snack
 
-<MudTable Items="@DevelopedEntrants" Dense="true" id="development-results">
+<MudTable Items="@DevelopedEntrants" Dense="true" Class="extra-dense" id="development-results">
     <ToolBarContent>
         <MudText Typo="Typo.h5">Development</MudText>
         <MudDivider Vertical="true" Class="mx-2" />
@@ -93,11 +93,11 @@
                 <MudNumericField T="int"
                                  @bind-Value="@context.Min"
                                  ReadOnly="@notDirectQuantifier"
-                                 Class="field-xs" />
+                                 Class="field-xs dense-field" />
                 <MudNumericField T="int"
                                  @bind-Value="@context.Max"
                                  ReadOnly="@notDirectQuantifier"
-                                 Class="field-xs" />
+                                 Class="field-xs dense-field" />
             </MudStack>
         </MudTd>
     </RowTemplate>
