--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -157,6 +157,10 @@ th {
     border-collapse: collapse;
 }
 
+.dense-field > .mud-input-control-input-container > div.mud-input.mud-input-text {
+    margin-top: 0px !important;
+}
+
 .extra-dense .mud-table-cell {
     padding-top: 4px !important;
     padding-bottom: 4px !important;
