Ok the raceweek is better and also fine for now

--- a/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
@@ -14,13 +14,13 @@
         </HeaderContent>
         <RowTemplate>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Comparer" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Comparer"  Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Minimum" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Minimum" Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Maximum" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Maximum" Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
                 <MudIconButton Icon="@Icons.Material.Outlined.Delete"
