--- a/SimTECH/SimTECH/Components/ResultCell.razor
+++ b/SimTECH/SimTECH/Components/ResultCell.razor
@@ -1,21 +1,8 @@
-﻿<div class="result-cell" style="@_cellStyles">
-    <MudStack Row="true"
-              Spacing="1"
-              Justify="Justify.Center"
-              AlignItems="AlignItems.Center"
-              Class="pa-0 mud-width-full"
-              Style="color:inherit">
-        <MudText Typo="@_typo" Color="Color.Inherit">@_resultDisplay</MudText>
-        @if (_hasPole && WithBonus)
-        {
-            <sup style="font-size: 0.65rem">P</sup>
-        }
-        @if (_hasFastestLap && WithBonus)
-        {
-            <sup style="font-size: 0.65rem">F</sup>
-        }
-    </MudStack>
-</div>
+﻿<ResultLabel Typo="@_typo"
+    HasPole="@_hasPole"
+    HasFastestLap="@_hasFastestLap"
+    Text="@_resultDisplay"
+    Style="@_cellStyles" />
 
 @code {
     [Parameter] public StandingResultCell? Result { get; set; }
