--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -61,9 +61,8 @@
                     </MudChip>
 
                     <div class="d-flex flex-row-reverse align-center gap-3 pa-0" style="width: 30%">
-                        <CustomIcon Icon="@RaweCeek.Climate.Icon" Colour="@RaweCeek.Climate.Colour">
-                            <MudText Typo="Typo.h5">@RaweCeek.Climate.Terminology</MudText>
-                        </CustomIcon>
+                        <MudText Typo="Typo.h5">@RaweCeek.Climate.Terminology</MudText>
+                        <CustomIcon Icon="@RaweCeek.Climate.Icon" Colour="@RaweCeek.Climate.Colour" />
                     </div>
                 </MudStack>
             </ToolBarContent>
