--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
@@ -19,8 +19,8 @@
         </MudTd>
     </RowTemplate>
 </MudTable>
-<br/>
-<MudText Typo="Typo.subtitle1">Abbreviations</MudText>
+
+<MudText Typo="Typo.subtitle1" Class="mt-2">Abbreviations</MudText>
 <MudDivider Class="my-1" />
 
 <MudSimpleTable>
@@ -31,18 +31,13 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>CHA</td>
-            <td>Chassis</td>
-        </tr>
-        <tr>
-            <td>LB</td>
-            <td>Life bonus</td>
-        </tr>
-        <tr>
-            <td>TGT</td>
-            <td>Target</td>
-        </tr>
+        @foreach (var abb in abbreviations.OrderBy(e => e.Key))
+        {
+            <tr>
+                <td>@abb.Key</td>
+                <td>@abb.Value</td>
+            </tr>
+        }
     </tbody>
 </MudSimpleTable>
 
@@ -57,6 +52,14 @@
                 @"The sessions during a race week which occur before the race. 
                 Usually refers to practice and qualifying."),
         };
+
+    private static readonly Dictionary<string, string> abbreviations = new()
+    {
+        { "CHA", "Chassis" },
+        { "LB", "Life bonus" },
+        { "PTS", "Points" },
+        { "TGT", "Target" },
+    };
 
     internal class GlossaryItem
     {
