--- a/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
@@ -70,7 +70,7 @@
 
     private Dictionary<Driver, List<Result>> groupedResults = new();
 
-    private Dictionary<Driver, int> driverRecords = new(amount);
+    private Dictionary<Driver, string> driverRecords = new(amount);
 
     private RecordStat[] recordStats = EnumHelper.DriverRecordStats;
 
@@ -101,26 +101,34 @@
         if (selected == RecordStat.Overtakes)
         {
             driverRecords = groupedResults
-                .Select(e => new { driver = e.Key, value = e.Value.Sum(s => s.Overtaken) })
+                .Select(e => new
+                { 
+                    driver = e.Key,
+                    value = NumberHelper.Average(e.Value.Sum(s => s.Overtaken), e.Value.Count(CountFilter(RecordStat.Start)))
+                })
                 .OrderByDescending(e => e.value)
                 .Take(amount)
-                .ToDictionary(e => e.driver, e => e.value);
+                .ToDictionary(e => e.driver, e => e.value.ToString());
         }
         else if (selected == RecordStat.Defended)
         {
             driverRecords = groupedResults
-                .Select(e => new { driver = e.Key, value = e.Value.Sum(s => s.Defended) })
+                .Select(e => new
+                {
+                    driver = e.Key,
+                    value = NumberHelper.Average(e.Value.Sum(s => s.Defended), e.Value.Count(CountFilter(RecordStat.Start)))
+                })
                 .OrderByDescending(e => e.value)
                 .Take(amount)
-                .ToDictionary(e => e.driver, e => e.value);
+                .ToDictionary(e => e.driver, e => e.value.ToString());
         }
         else
         {
             driverRecords = groupedResults
-                .Select(e => new { driver = e.Key, value = e.Value.Count(SearchFilter(selected)) })
+                .Select(e => new { driver = e.Key, value = e.Value.Count(CountFilter(selected)) })
                 .OrderByDescending(e => e.value)
                 .Take(amount)
-                .ToDictionary(e => e.driver, e => e.value);
+                .ToDictionary(e => e.driver, e => e.value.ToString());
         }
 
         selectedRecord = selected;
@@ -128,7 +136,7 @@
         loading = false;
     }
 
-    private Func<Result, bool> SearchFilter(RecordStat selected) => selected switch
+    private Func<Result, bool> CountFilter(RecordStat selected) => selected switch
     {
         RecordStat.Entry => (result => true),
         RecordStat.Start => (result => result.Status != RaceStatus.Dnq),
@@ -136,8 +144,6 @@
         RecordStat.Pole => (result => result.Grid == 1),
         RecordStat.Retired => (result => result.Status == RaceStatus.Dnf || result.Status == RaceStatus.Dsq || result.Status == RaceStatus.Fatal),
         RecordStat.FastestLap => (result => result.FastestLap),
-        //RecordStat.Overtakes => (result => result.Status != RaceStatus.Dnq),
-        //RecordStat.Defended => (result => result.Status != RaceStatus.Dnq),
-        _ => throw new InvalidOperationException("Ayo, I do not recognize this record option")
+        _ => throw new InvalidOperationException($"Ayo, no counting filter for statistic {selected}")
     };
 }
