some small design updoots

--- a/SimTECH/SimTECH/Pages/Season/Development/SummaryDevelopment.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/SummaryDevelopment.razor
@@ -5,10 +5,8 @@
     <DialogContent>
         <MudPaper>
             <MudStack Row="true" Justify="Justify.SpaceBetween">
-                <div>
-                    <MudText Typo="Typo.body2" Color="Color.Info">OLD - CHANGE - NEW</MudText>
-                </div>
-                <ScreenshotButton TargetId="developed-summary" Class="btn-md" />
+                <MudText Typo="Typo.body2" Color="Color.Info">OLD - CHANGE - NEW</MudText>
+                <ScreenshotIconButton TargetId="developed-summary" />
             </MudStack>
         </MudPaper>
         <MudPaper id="developed-summary">
@@ -30,7 +28,7 @@
                                 <MudDivider Vertical="true" Class="mx-2" />
                                 <MudText Typo="Typo.h5">Boing</MudText>
                                 <MudSpacer />
-                                <ScreenshotButton TargetId="@(entrantGroup.SummaryElementId)" Class="btn-md" />
+                                <ScreenshotIconButton TargetId="@(entrantGroup.SummaryElementId)" />
                             </ToolBarContent>
                             <HeaderContent>
                                 @foreach (var (aspect, i) in entrantGroup.Aspects.OrderBy(e => e.ReadableAspect()).WithIndex())
