--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -22,7 +22,7 @@
                     <MudDivider />
 
                     <MudStack>
-                        <MudStack Spacing="0">
+                        <MudStack Spacing="1">
                             <MudTooltip Text="For whom the development is run">
                                 <MudText Typo="Typo.subtitle1">Entrant</MudText>
                             </MudTooltip>
@@ -37,29 +37,29 @@
                             <MudDivider />
                         </div>
 
-                        <MudStack Spacing="0">
+                        <MudStack Spacing="1">
                             <MudTooltip Text="Which aspect is going to be developed">
                                 <MudText Typo="Typo.subtitle1">Target</MudText>
                             </MudTooltip>
                             <MudChipSet SelectedChipChanged="TargetChipChanged" Mandatory="true">
-                                <MudChip Color="Color.Secondary" Value="Aspect.Reliability" Default="true">Reliability</MudChip>
+                                <MudChip Color="Color.Secondary" Value="Aspect.Reliability" Default="true">@Aspect.Reliability.ShortReadableAspect()</MudChip>
 
                                 @if (selectedEntrant == Entrant.Driver)
                                 {
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Skill">@Aspect.Skill.ReadableAspect()</MudChip>
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Attack">Attack</MudChip>
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Defense">Defense</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Skill">@Aspect.Skill.ShortReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Attack">@Aspect.Attack.ShortReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Defense">@Aspect.Defense.ShortReadableAspect()</MudChip>
                                 }
                                 else if (selectedEntrant == Entrant.Team)
                                 {
-                                    <MudChip Color="Color.Secondary" Value="Aspect.BaseCar">@Aspect.BaseCar.ReadableAspect()</MudChip>
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Aero">Aero</MudChip>
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Chassis">Chassis</MudChip>
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Powertrain">Powertrain</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.BaseCar">@Aspect.BaseCar.ShortReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Aero">@Aspect.Aero.ShortReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Chassis">@Aspect.Chassis.ShortReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Powertrain">@Aspect.Powertrain.ShortReadableAspect()</MudChip>
                                 }
                                 else if (selectedEntrant == Entrant.Engine)
                                 {
-                                    <MudChip Color="Color.Secondary" Value="Aspect.Engine">@Aspect.Engine.ReadableAspect()</MudChip>
+                                    <MudChip Color="Color.Secondary" Value="Aspect.Engine">@Aspect.Engine.ShortReadableAspect()</MudChip>
                                 }
                             </MudChipSet>
                         </MudStack>
@@ -68,7 +68,7 @@
                             <MudDivider />
                         </div>
 
-                        <MudStack Spacing="0">
+                        <MudStack Spacing="1">
                             <MudTooltip Text="How the development ranges are determined">
                                 <MudText Typo="Typo.subtitle1">Type</MudText>
                             </MudTooltip>
@@ -85,10 +85,10 @@
                                 <MudDivider />
                             </div>
 
-                            <MudStack Spacing="0">
+                            <MudStack Spacing="1">
                                 <MudText Typo="Typo.subtitle1">Development range</MudText>
-                                <MudNumericField T="int" Label="Min" ValueChanged="ApplyMinRange" Class="field-sm" />
-                                <MudNumericField T="int" Label="Max" ValueChanged="ApplyMaxRange" Class="field-sm" />
+                                <MudNumericField T="int" Label="MIN" ValueChanged="ApplyMinRange" Class="field-sm" />
+                                <MudNumericField T="int" Label="MAX" ValueChanged="ApplyMaxRange" Class="field-sm" />
                             </MudStack>
                         }
                     </MudStack>
