--- a/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/RangeInput.razor
@@ -14,19 +14,19 @@
         </HeaderContent>
         <RowTemplate>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Comparer" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Comparer" Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Minimum" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Minimum" Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
-                <MudNumericField @bind-Value="@context.Maximum" Class="field-xs" />
+                <MudNumericField @bind-Value="@context.Maximum" Class="field-xs dense-field" />
             </MudTd>
             <MudTd>
                 <MudIconButton Icon="@Icons.Material.Outlined.Delete"
                                Color="Color.Error"
                                Size="Size.Small"
-                               OnClick="@(() => RemoveRow(context))"/>
+                               OnClick="@(() => RemoveRow(context))" />
             </MudTd>
         </RowTemplate>
     </MudTable>
