--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -184,7 +184,7 @@
                                 <MudColorPicker @bind-Text="context.Colour" Placeholder="Colour" Class="field-md" />
                             </MudTd>
                             <MudTd DataLabel="Tag">
-                                <MudTextField T="string" @bind-Value="@context.Name" Class="field-md" />
+                                <MudTextField T="string" @bind-Value="@context.Tag" Class="field-md" />
                             </MudTd>
                             <MudTd></MudTd>
                         </RowEditingTemplate>
